# OcupacionLaboralLosRios

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: settings.py
data/: dataset_.csv  tasa_ocupacion_laboral_los_rios.csv
docs/: DEVELOPMENT.md  PROYECTO_COMPLETADO.md  charts.js  index.html  interactive.js  styles.css
notebooks/: ocupados_categoria_ocupacional.ipynb  ocupados_grupo_ocupacional_ciuo88.ipynb
scripts/: export_ocupacion_plot.py  verificar_proyecto.py
src/: __init__.py
src/etl/: processors.py
src/models/: base.py
src/utils/: comparar_valores.py  helpers.py
src/visualization/: charts.py  dashboard.py
tests/: test_dashboard.py  test_etl.py
